@@ -1,4 +1,4 @@
-# Rstox version: 1.9.1 (latest alpha, 2019-01-11)
+# Rstox version: 1.9.1 (latest alpha, 2019-01-14)
 # R version: 3.5.0
 
 # The package Rstox contains most of the functionality of the stock assesment utility StoX, which is an open source approach to acoustic and swept area survey calculations. Download Rstox from ftp://ftp.imr.no/StoX/Download/Rstox or install by running the following commands in R:
@@ -99,6 +99,10 @@ install.packages("ftp://ftp.imr.no/StoX/Download/Rstox/Versions/Alpha/Rstox_1.9.
 # 26. Increased default memory from 2 to 6 GB to accommodate ECA projects, which are generally large.
 
 # 27. Renamed the parameter API to server in getNMDinfo() and getNMDdata(). No backwards compatibility.
+
+# 28. Fixed bug with Java v11.
+
+# 29. Fixed bug with subset in getNMDdata().
 
 
 
