@@ -708,6 +708,10 @@ Increased default memory from 2 to 6 GB to accommodate ECA projects, which are g
 
 Renamed the parameter API to server in getNMDinfo() and getNMDdata(). No backwards compatibility.
 
+Fixed bug with Java v11.
+
+Fixed bug with subset in getNMDdata().
+
 
 ########## Version 1.10 (2018-07-06) ##########
 
@@ -764,3 +768,7 @@ Changed default of keepMissing to TRUE in readBaselineParametersJava(), thus inc
 Increased default memory from 2 to 6 GB to accommodate ECA projects, which are generally large.
 
 Renamed the parameter API to server in getNMDinfo() and getNMDdata(). No backwards compatibility.
+
+Fixed bug with Java v11.
+
+Fixed bug with subset in getNMDdata().
